reorder exploration; add some plots

--- a/airbnb_prices.ipynb
+++ b/airbnb_prices.ipynb
@@ -16,8 +16,15 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "import sklearn\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "mpl.rcParams['font.size'] = 12\n",
+    "mpl.rcParams['axes.labelsize'] = 10"
    ]
   },
   {
@@ -69,6 +76,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# drop features id, host_id and host_name\n",
+    "df_airbnb.drop(['id', 'name', 'host_id', 'host_name'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we will look for missing data on the remaining features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_airbnb.isnull().sum()"
    ]
   },
@@ -77,8 +101,6 @@
    "metadata": {},
    "source": [
     "We have missing data for the following features:\n",
-    "* name --> not a big deal, we can ignore it for the moment\n",
-    "* host_name --> not a big deal, we will ignore this variable\n",
     "* last_review --> comes from entries without any review\n",
     "* reviews_per_month --> comes from entries without any review; we will replace it by 0"
    ]
@@ -90,26 +112,27 @@
    "outputs": [],
    "source": [
     "# replace NaN by 0 for column reviews per month\n",
-    "df_airbnb.reviews_per_month.fillna(0, inplace=True)\n",
+    "df_airbnb.reviews_per_month.fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So far we have 12 columns, 11 of them corresponding to features and 1 corresponding to our target variable, price. \n",
     "\n",
-    "# drop features id, host_id and host_name\n",
-    "df_airbnb.drop(['id', 'host_id', 'host_name'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## First data exploration\n",
+    "First we will start by taking a look to the price to see its distribution and check there are no inconsistencies.\n",
     "\n",
-    "# describe sth here! "
+    "Then we will explore the features and their distributions and correlation among them. We can expect high correlation between:\n",
+    "* neighbourhood_group, neighbourhood, latitude and longitude\n",
+    "* number_of_reviews and reviews_per_month (can also be related with last_review)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explore cases where there may be an error with the price. "
+    "### Exploration of price"
    ]
   },
   {
@@ -118,34 +141,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_airbnb[df_airbnb.price > 1000].sort_values('price')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will drop the cases with price = \\\\$0 since they may correspond to errors."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_airbnb.drop(df_airbnb[df_airbnb.price < 10]. index, axis=0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10,5))\n",
-    "df_airbnb['price'].plot(kind='hist', bins=80,logx=True, title='Price distribution')\n",
-    "plt.xlabel('Price $')\n",
+    "f, ax = plt.subplots(1, 2, figsize=(15,5))\n",
+    "df_airbnb['price'].plot(kind='hist', bins=80, title='Price distribution', ax=ax[0])\n",
+    "df_airbnb['price'].plot(kind='hist', bins=80,logx=True, logy=True, title='Price distribution', ax=ax[1])\n",
+    "ax[0].set_xlabel('Price $')\n",
+    "ax[1].set_xlabel('Log Price $')\n",
     "plt.show()"
    ]
   },
@@ -164,14 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_pct_price(price):\n",
-    "    print('Appartments with price over ${}: {:.2f}%'.\\\n",
-    "          format(price, 100 * len(df_airbnb[df_airbnb.price > price])/len(df_airbnb)))\n",
-    "\n",
-    "print_pct_price(200)\n",
-    "print_pct_price(300)\n",
-    "print_pct_price(500)\n",
-    "print_pct_price(1000)"
+    "print('Number of cases with price = $0: ',len(df_airbnb[df_airbnb.price == 0]))"
    ]
   },
   {
@@ -180,10 +173,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10,5))\n",
-    "df_airbnb[df_airbnb['price'] < 300].price.plot(kind='hist', bins=100,title='Price distribution')\n",
-    "plt.xlabel('Price $')\n",
-    "plt.show()"
+    "# drop cases with price 0\n",
+    "df_airbnb.drop(df_airbnb[df_airbnb.price < 10]. index, axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_pct_price(attribute, value):\n",
+    "    print('Appartments with {} over ${}: {:.2f}%'.\\\n",
+    "          format(attribute, \\\n",
+    "                 value, \\\n",
+    "                 100 * len(df_airbnb[df_airbnb[attribute] > value])/len(df_airbnb)))\n",
+    "\n",
+    "print_pct_price('price', 200)\n",
+    "print_pct_price('price', 300)\n",
+    "print_pct_price('price', 500)\n",
+    "print_pct_price('price', 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(1, 2, figsize=(15,5))\n",
+    "df_airbnb[df_airbnb['price'] <= 400].price.plot(kind='hist', bins=100,title='Price distribution below $300', ax=ax[0])\n",
+    "df_airbnb[df_airbnb['price'] > 400].price.plot(kind='hist', bins=100, title='Price distribution above $300', ax=ax[1])\n",
+    "ax[0].set_xlabel('Price $')\n",
+    "ax[1].set_xlabel('Price $')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -192,10 +215,187 @@
    "source": [
     "Insights: \n",
     "* Mean price is \\\\$153 and median price is \\\\$106. This reflects large outliers that increase the mean price.\n",
-    "* Min price is \\\\$10 while max price is \\\\$1k\n",
+    "* Min price is \\\\$0 while max price is \\\\$10k. We will drop the cases with price = \\\\$0 since they may correspond to errors.\n",
     "* Around 95% of the appartments have a price lower than \\\\$300. From these, a good amount concentrate in a range lower than \\\\$100. We can also observe some peaks around round prices (100, 150, etc.)\n",
     "* Appartments over \\\\$1k represent less than 0.5\\% of the cases."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploration of features\n",
+    "\n",
+    "The features **neighbourhood** is left out of the plot due to the large number of possible values. The feature **last_review** is left out of the plot since we cannot relate it to the date when the prices were retrieved."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(3,3, figsize=(40,30))\n",
+    "ax = ax.flatten()\n",
+    "for idx, col in enumerate(df_airbnb.drop(['neighbourhood', 'price', 'last_review'], axis=1).columns):\n",
+    "    if df_airbnb[col].dtype == object:\n",
+    "        df_airbnb.groupby(col).count().iloc[:,1].plot(kind='bar', ax=ax[idx], title=col)\n",
+    "        ax[idx].tick_params(axis='x', rotation=0)\n",
+    "    else:\n",
+    "        df_airbnb[col].plot(kind='hist', bins=50, ax=ax[idx], title=col)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insights: \n",
+    "* Neighbourhood: Brooklyn and Manhattan are the most represented ones.\n",
+    "* Most locations offered are entire appartments or private rooms. Shared rooms are very rare.\n",
+    "* Number of reviews and reviews per month seem to follow a Poisson distribution.\n",
+    "* Minimum nights and host listing count may offer more insights when taking logarithm of the values. \n",
+    "* Availability is highly concentrated aroud 1 and then there is a great decrease for the rest of values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis per neighbourhood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_airbnb.groupby('neighbourhood_group').agg({'neighbourhood':['count','nunique'], \n",
+    "                                              'price':['min', 'mean', 'median', 'max'],\n",
+    "                                             'number_of_reviews':['min', 'mean', 'median', 'max']})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we analyse by neighbourhood, we can highlight:\n",
+    "* Manhattan is the one grouping less neighbourhoods with around 60% of the neighbourhoods that Queens groups (which is the one with the largest value).\n",
+    "* In terms of price, they all have almost the same minimum price. Nevertheless, Manhattan shows a median price that is almost 3 times the median of the lowest price (Bronx). The maximum price at Bronx is 25% of the maximum at Manhattan, Brooklyn and Staten Island. \n",
+    "* In terms of number of reviews, the median is much lower than the mean in all cases, showing the presence of large sporadic numbers and a great amount of low values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(1,2, figsize=(20,5))\n",
+    "ax = ax.flatten()\n",
+    "\n",
+    "sns.violinplot(data=df_airbnb[df_airbnb.price < 300], x='neighbourhood_group', y='price', ax=ax[0], \\\n",
+    "               title='Price vs Neighbourhood')\n",
+    "sns.violinplot(data=df_airbnb, x='neighbourhood_group', y='price', ax=ax[1], \\\n",
+    "               title='Price vs Neighbourhood')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis of correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#X = df_airbnb.drop(['price', 'neighbourhood', 'last_review'], axis=1)\n",
+    "X = pd.get_dummies(df_airbnb.drop(['price', 'neighbourhood', 'last_review'], axis=1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_matrix = np.corrcoef(X).round(decimals=2)\n",
+    "corr_matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis type of room"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(1,2, figsize=(20,5))\n",
+    "ax = ax.flatten()\n",
+    "\n",
+    "sns.violinplot(data=df_airbnb[df_airbnb.price < 500], x='room_type', y='price', ax=ax[0], \\\n",
+    "               title='Price vs Neighbourhood')\n",
+    "sns.violinplot(data=df_airbnb, x='room_type', y='price', ax=ax[1], \\\n",
+    "               title='Price vs Neighbourhood')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis minimum nights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ncode categorical variables with one-hot encoding\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -218,19 +418,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "f, ax = plt.subplots(1,2, figsize=(20,5))\n",
-    "ax = ax.flatten()\n",
-    "\n",
-    "sns.violinplot(data=df_airbnb[df_airbnb.price < 300], x='neighbourhood_group', y='price', ax=ax[0], \\\n",
-    "               title='Price vs Neighbourhood')\n",
-    "sns.violinplot(data=df_airbnb[df_airbnb.price < 300], x='room_type', y='price', ax=ax[1],\\\n",
-    "              title='Price vs Type of room')\n",
-    "plt.show()"
+    "We will use the neighbourhood group as categorical variable."
    ]
   },
   {
@@ -248,7 +439,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_airbnb.dtypes"
+    "# drop features\n",
+    "df_models = df_airbnb.drop(['name', 'neighbourhood', 'last_review'], axis=1)\n",
+    "# convert categorical variables to one-hot encoding\n",
+    "df_models = pd.get_dummies(df_models)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_models.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(3,2,figsize=(20,14))\n",
+    "ax = ax.flatten()\n",
+    "df_models.minimum_nights.plot(kind='hist', ax=ax[0], bins=100, logx=True,\\\n",
+    "                              logy=True, title='Distribution number of reviews')\n",
+    "df_models.number_of_reviews.plot(kind='hist', ax=ax[1], bins=100, logx=True, \\\n",
+    "                                 logy=True, title='Distribution number of reviews')\n",
+    "df_models.reviews_per_month.plot(kind='hist', ax=ax[2], bins=100, logx=True,\n",
+    "                                 logy=True, title='Distribution reviews per month')\n",
+    "df_models.calculated_host_listings_count.plot(kind='hist', ax=ax[3], bins=100, logx=True,\\\n",
+    "                                              logy=True, title='Distribution hosts listings')\n",
+    "df_models.availability_365.plot(kind='hist', ax=ax[4], bins=100, title='Distribution availability')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_models.quantile(0.95)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create X and y matrices \n",
+    "X = df_models.drop(['price'], axis=1).to_numpy()\n",
+    "y = df_models['price'].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)\n",
+    "\n",
+    "scaler = StandardScaler().fit(X_train)\n",
+    "X_train_transformed = scaler.transform(X_train)\n",
+    "X_test_transformed = scaler.transform(X_test)\n",
+    "clf.score(X_test_transformed, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(X_test_transformed[:,1])"
    ]
   },
   {
