add 3 models (check!)

--- a/airbnb_prices.ipynb
+++ b/airbnb_prices.ipynb
@@ -18,7 +18,10 @@
     "\n",
     "import sklearn\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
+    "from sklearn.linear_model import Ridge, ElasticNet\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,9 +31,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data Exploration\n",
     "Load data and perform first exploration"
    ]
   },
@@ -67,7 +81,7 @@
    "source": [
     "A first look suggests that columns such as **id**, **name**, **host_id** and **host_name** can be discarded from the analysis. \n",
     "\n",
-    "The column **name** could be used to incorporate some more features (keywords appearing in the name). This would be discarded on the first simple models."
+    "The column **name** could be used to incorporate some more features (keywords appearing in the name). This will be discarded on the first simple models."
    ]
   },
   {
@@ -291,21 +305,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f, ax = plt.subplots(1,2, figsize=(20,5))\n",
-    "ax = ax.flatten()\n",
+    "def plot_price_dist(col_name):\n",
+    "    f, ax = plt.subplots(1,2, figsize=(20,5))\n",
+    "    ax = ax.flatten()\n",
     "\n",
-    "sns.violinplot(data=df_airbnb[df_airbnb.price < 300], x='neighbourhood_group', y='price', ax=ax[0], \\\n",
-    "               title='Price vs Neighbourhood')\n",
-    "sns.violinplot(data=df_airbnb, x='neighbourhood_group', y='price', ax=ax[1], \\\n",
-    "               title='Price vs Neighbourhood')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Analysis of correlation"
+    "    sns.violinplot(data=df_airbnb[df_airbnb.price < 350], x=col_name, y='price', ax=ax[0])\n",
+    "    sns.violinplot(data=df_airbnb, x=col_name, y='price', ax=ax[1])\n",
+    "    ax[0].set_title('Price (up to $350) vs {}'.format(col_name))\n",
+    "    ax[1].set_title('Price vs {}'.format(col_name))\n",
+    "    plt.show()"
    ]
   },
   {
@@ -314,34 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#X = df_airbnb.drop(['price', 'neighbourhood', 'last_review'], axis=1)\n",
-    "X = pd.get_dummies(df_airbnb.drop(['price', 'neighbourhood', 'last_review'], axis=1))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = X.to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corr_matrix = np.corrcoef(X).round(decimals=2)\n",
-    "corr_matrix"
+    "plot_price_dist('neighbourhood_group')"
    ]
   },
   {
@@ -357,80 +338,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f, ax = plt.subplots(1,2, figsize=(20,5))\n",
-    "ax = ax.flatten()\n",
-    "\n",
-    "sns.violinplot(data=df_airbnb[df_airbnb.price < 500], x='room_type', y='price', ax=ax[0], \\\n",
-    "               title='Price vs Neighbourhood')\n",
-    "sns.violinplot(data=df_airbnb, x='room_type', y='price', ax=ax[1], \\\n",
-    "               title='Price vs Neighbourhood')\n",
-    "plt.show()"
+    "df_airbnb.groupby('room_type').agg({'price':['min', 'mean', 'median', 'max'],\n",
+    "                                    'number_of_reviews':['min', 'mean', 'median', 'max']})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_price_dist('room_type')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Analysis minimum nights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ncode categorical variables with one-hot encoding\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f, ax = plt.subplots(2,2, figsize=(20,12))\n",
-    "ax = ax.flatten()\n",
-    "\n",
-    "df_airbnb.plot(kind='scatter', x='calculated_host_listings_count', y='price', ax=ax[0], \\\n",
-    "               title='Price vs Number of properties per host')\n",
-    "df_airbnb.plot(kind='scatter', x='number_of_reviews', y='price', ax=ax[1],\\\n",
-    "              title='Price vs Number of reviews per property')\n",
-    "df_airbnb.plot(kind='scatter', x='minimum_nights', y='price', ax=ax[2],\\\n",
-    "              title='Price vs Number of min nights')\n",
-    "df_airbnb.plot(kind='scatter', x='availability_365', y='price', ax=ax[3], \\\n",
-    "              title='Price vs Availability')\n",
-    "plt.show()"
+    "From the type of room, we can highlight:\n",
+    "* Private and Share rooms have a similar mean price but private rooms can increase to much higher prices ( \\\\$10k vs \\\\$1.8k) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use the neighbourhood group as categorical variable."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO THINGS:\n",
+    "#### Analysis reviews\n",
+    "The columns **last review** does not offer us much data since this value is static and we cannot relate it to the current date (the data has not been updated and we don't know the day when it was generated). Therefore, we will not consider it. \n",
     "\n",
-    "* First models based on numerical and categorical data --> drop name, host_name\n"
+    "We expect high correlation between **number of reviews** and **reviews per month**"
    ]
   },
   {
@@ -439,10 +375,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# drop features\n",
-    "df_models = df_airbnb.drop(['name', 'neighbourhood', 'last_review'], axis=1)\n",
-    "# convert categorical variables to one-hot encoding\n",
-    "df_models = pd.get_dummies(df_models)"
+    "df_airbnb.drop(['last_review'], axis=1, inplace=True)\n",
+    "df_airbnb.head()"
    ]
   },
   {
@@ -451,26 +385,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_models.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f, ax = plt.subplots(3,2,figsize=(20,14))\n",
-    "ax = ax.flatten()\n",
-    "df_models.minimum_nights.plot(kind='hist', ax=ax[0], bins=100, logx=True,\\\n",
-    "                              logy=True, title='Distribution number of reviews')\n",
-    "df_models.number_of_reviews.plot(kind='hist', ax=ax[1], bins=100, logx=True, \\\n",
-    "                                 logy=True, title='Distribution number of reviews')\n",
-    "df_models.reviews_per_month.plot(kind='hist', ax=ax[2], bins=100, logx=True,\n",
-    "                                 logy=True, title='Distribution reviews per month')\n",
-    "df_models.calculated_host_listings_count.plot(kind='hist', ax=ax[3], bins=100, logx=True,\\\n",
-    "                                              logy=True, title='Distribution hosts listings')\n",
-    "df_models.availability_365.plot(kind='hist', ax=ax[4], bins=100, title='Distribution availability')\n",
+    "f, ax = plt.subplots(figsize=(20,5))\n",
+    "df_airbnb.plot(kind='scatter', x='number_of_reviews', y='reviews_per_month', ax=ax)\n",
     "plt.show()"
    ]
   },
@@ -480,7 +396,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_models.quantile(0.95)"
+    "f, ax = plt.subplots(1,2,figsize=(20,5))\n",
+    "df_airbnb.plot(kind='scatter', x='number_of_reviews', y='price', \\\n",
+    "               ax=ax[0], title='Price vs Number of Reviews')\n",
+    "df_airbnb.plot(kind='scatter', x='reviews_per_month', y='price', \\\n",
+    "               ax=ax[1], title='Price vs Reviews/Month')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insights from reviews:\n",
+    "* Number of reviews and reviews per month are correlated although less than expected. The relation is bounded. \n",
+    "* The relation with price shows an exponential decay."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Correlation between features and encoding of categorical variables"
    ]
   },
   {
@@ -488,17 +426,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# create X and y matrices \n",
-    "X = df_models.drop(['price'], axis=1).to_numpy()\n",
-    "y = df_models['price'].to_numpy()"
+    "# drop neighbourhood prioritizing neighbourhood group\n",
+    "df_airbnb.drop(['neighbourhood'], axis=1, inplace=True)\n",
+    "# transform categorical variables to 1-hot encoding\n",
+    "df_airbnb_encoded = pd.get_dummies(df_airbnb)"
    ]
   },
   {
@@ -507,12 +439,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#corr = np.corrcoef(df_airbnb_encoded.transpose()).round(decimals=3)\n",
+    "#fig, ax = plt.subplots(figsize=(20,20))\n",
+    "#sns.heatmap(corr, vmin=-1, vmax=1, annot=True, ax=ax, \\\n",
+    "#            xticklabels=df_airbnb_encoded.columns, yticklabels=df_airbnb_encoded.columns)\n",
+    "#plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Price Prediction:\n",
+    "\n",
+    "* Create train and test set\n",
+    "* Normalize features\n",
+    "* For different models:\n",
+    "    - Train, tune hyperparameters, evaluate performance\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_outliers = df_airbnb_encoded.drop(df_airbnb_encoded[df_airbnb_encoded['price'] > 350].index, axis=0)\n",
+    "X, y = df_outliers.drop(['price'], axis=1), df_outliers.price\n",
+    "\n",
+    "# Split data into train and test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)\n",
     "\n",
+    "# scale features\n",
     "scaler = StandardScaler().fit(X_train)\n",
     "X_train_transformed = scaler.transform(X_train)\n",
-    "X_test_transformed = scaler.transform(X_test)\n",
-    "clf.score(X_test_transformed, y_test)"
+    "X_test_transformed = scaler.transform(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define metrics"
    ]
   },
   {
@@ -521,7 +496,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(X_test_transformed[:,1])"
+    "def get_score(y_pred, y_true):\n",
+    "    print('RMSE: {:.4f}'.format(mean_squared_error(y_true, y_pred, squared=False)))\n",
+    "    print('MAE : {:.4f}'.format(mean_absolute_error(y_true, y_pred)))\n",
+    "    print('R2  : {:.4f}'.format(r2_score(y_true, y_pred)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model 1. Ridge Regression --REVIEW!! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params1 = np.logspace(-3, 3, 40)\n",
+    "\n",
+    "model1 = Ridge()\n",
+    "grid1 = GridSearchCV(estimator=model1, param_grid=dict(alpha=params1), cv=5)\n",
+    "grid1.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "y_pred = grid.predict(X_test_transformed)\n",
+    "get_score(y_pred, y_test)\n",
+    "print(grid1.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model 2. Elastic Net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params2 = {'alpha':np.logspace(-2, 2, 10), 'l1_ratio':np.linspace(1e-2, 1, 10)}\n",
+    "\n",
+    "model2 = ElasticNet(max_iter=100)\n",
+    "grid2 = GridSearchCV(estimator=model2, param_grid=params2, cv=5)\n",
+    "grid2.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "y_pred = grid.predict(X_test_transformed)\n",
+    "get_score(y_pred, y_test)\n",
+    "print(grid2.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model 3. Random Forest Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params3 = {'max_depth': range(3,7), 'n_estimators': (10, 50, 100, 1000)}\n",
+    "\n",
+    "model3 = RandomForestRegressor()\n",
+    "grid3 = GridSearchCV(estimator=model3, param_grid=params3, cv=5, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "grid_result = grid3.fit(X, y)\n",
+    "best_params = grid_result.best_params_\n",
+    "\n",
+    "model3_best = RandomForestRegressor(max_depth=best_params[\"max_depth\"], n_estimators=best_params[\"n_estimators\"],\n",
+    "                                random_state=False, verbose=False)\n",
+    "model3.fit(X_train_transformed, y_train)\n",
+    "get_score(model3.predict(X_test_transformed), y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20,5))\n",
+    "plt.scatter(list(range(len(y_test[:100]))), y_test[:100])\n",
+    "plt.scatter(list(range(len(y_pred[:100]))), y_pred[:100])"
    ]
   },
   {
