--- a/airbnb_prices.ipynb
+++ b/airbnb_prices.ipynb
@@ -22,6 +22,7 @@
     "from sklearn.linear_model import Ridge, ElasticNet\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.neural_network import MLPRegressor\n",
     "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -91,7 +92,7 @@
    "outputs": [],
    "source": [
     "# drop features id, host_id and host_name\n",
-    "df_airbnb.drop(['id', 'name', 'host_id', 'host_name'], axis=1, inplace=True)"
+    "df_airbnb.drop(['id', 'name', 'host_name'], axis=1, inplace=True)"
    ]
   },
   {
@@ -447,6 +448,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_airbnb_encoded"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -472,15 +482,38 @@
    "outputs": [],
    "source": [
     "df_outliers = df_airbnb_encoded.drop(df_airbnb_encoded[df_airbnb_encoded['price'] > 350].index, axis=0)\n",
+    "#df_outliers = df_airbnb_encoded\n",
     "X, y = df_outliers.drop(['price'], axis=1), df_outliers.price\n",
     "\n",
     "# Split data into train and test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)\n",
     "\n",
     "# scale features\n",
-    "scaler = StandardScaler().fit(X_train)\n",
-    "X_train_transformed = scaler.transform(X_train)\n",
-    "X_test_transformed = scaler.transform(X_test)\n"
+    "# Not using StandardScaler to treat differently continuous, discrete and categorical variables\n",
+    "\n",
+    "def scale(x, df_train, df_test, cont=True):\n",
+    "    std = np.std(df_train[x])\n",
+    "\n",
+    "    if cont:\n",
+    "        mean = np.mean(df_train[x])\n",
+    "        df_train[x] = df_train[x].apply(lambda x: (x - mean)/std)\n",
+    "        df_test[x] = df_test[x].apply(lambda x: (x - mean)/std)\n",
+    "    else:\n",
+    "        median = np.median(df_train[x])\n",
+    "        df_train[x] = df_train[x].apply(lambda x: (x - median)/std)\n",
+    "        df_test[x] = df_test[x].apply(lambda x: (x - median)/std)\n",
+    "\n",
+    "\n",
+    "X_train_transformed = X_train.copy()\n",
+    "X_test_transformed = X_test.copy()\n",
+    "\n",
+    "for feature in ['latitude', 'longitude', 'reviews_per_month']:\n",
+    "    scale(feature, X_train_transformed, X_test_transformed)\n",
+    "\n",
+    "\n",
+    "for feature in ['minimum_nights', 'number_of_reviews', 'calculated_host_listings_count', 'availability_365']:\n",
+    "    scale(feature, X_train_transformed, X_test_transformed, cont=False)  \n",
+    "\n"
    ]
   },
   {
@@ -503,6 +536,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_outliers = y_train <= 350"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -521,8 +563,8 @@
     "grid1 = GridSearchCV(estimator=model1, param_grid=dict(alpha=params1), cv=5)\n",
     "grid1.fit(X_train_transformed, y_train)\n",
     "\n",
-    "y_pred = grid.predict(X_test_transformed)\n",
-    "get_score(y_pred, y_test)\n",
+    "y_pred1 = grid1.predict(X_test_transformed)\n",
+    "get_score(y_pred1, y_test)\n",
     "print(grid1.best_params_)"
    ]
   },
@@ -545,8 +587,8 @@
     "grid2 = GridSearchCV(estimator=model2, param_grid=params2, cv=5)\n",
     "grid2.fit(X_train_transformed, y_train)\n",
     "\n",
-    "y_pred = grid.predict(X_test_transformed)\n",
-    "get_score(y_pred, y_test)\n",
+    "y_pred2 = grid2.predict(X_test_transformed)\n",
+    "get_score(y_pred2, y_test)\n",
     "print(grid2.best_params_)"
    ]
   },
@@ -573,8 +615,55 @@
     "\n",
     "model3_best = RandomForestRegressor(max_depth=best_params[\"max_depth\"], n_estimators=best_params[\"n_estimators\"],\n",
     "                                random_state=False, verbose=False)\n",
-    "model3.fit(X_train_transformed, y_train)\n",
-    "get_score(model3.predict(X_test_transformed), y_test)"
+    "model3_best.fit(X_train_transformed, y_train)\n",
+    "y_pred3 = model3_best.predict(X_test_transformed)\n",
+    "get_score(y_pred3, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('best_parameters: ', best_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model 4. MLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params4 = [{'hidden_layer_sizes': [10,30,50, 100],\n",
+    "'activation': ['relu'],\n",
+    "'solver':['lbfgs'], 'alpha':[5e-1, 1e-2, 1e-3, 1e-4],\n",
+    "'batch_size':['auto'], \n",
+    "'learning_rate_init':[1e-3], 'max_iter':[500]}]\n",
+    "\n",
+    "model4 = MLPRegressor(verbose=True)\n",
+    "grid4 = GridSearchCV(model4, params4, cv=5)\n",
+    "grid_result = grid4.fit(X_train_transformed, y_train)\n",
+    " \n",
+    "#mlp = MLPRegressor(hidden_layer_sizes=(20,), activation='logistic', solver='lbfgs', alpha=0.0001, batch_size='auto', learning_rate='constant', learning_rate_init=0.001, max_iter=500)\n",
+    "#mlp.fit(X_train,y_train)\n",
+    "train_mse = mean_squared_error(y_train, grid4.predict(X_train_transformed))\n",
+    "test_mse = mean_squared_error(y_test, grid4.predict(X_test_transformed))\n",
+    "\n",
+    "y_pred4 = grid4.predict(X_test_transformed)\n",
+    "get_score(y_pred4, y_test)\n",
+    " \n",
+    "print(grid4.best_params_)\n",
+    "print(grid4.best_score_)\n",
+    "print(\"Train MSE:\", np.round(train_mse,2))\n",
+    "print(\"Test MSE:\", np.round(test_mse,2))"
    ]
   },
   {
@@ -584,8 +673,15 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20,5))\n",
-    "plt.scatter(list(range(len(y_test[:100]))), y_test[:100])\n",
-    "plt.scatter(list(range(len(y_pred[:100]))), y_pred[:100])"
+    "def error(y, y_pred):\n",
+    "    return np.sqrt((y - y_pred)**2)\n",
+    "\n",
+    "plt.hist(error(y_test, y_pred1), bins=100, color='blue', alpha=0.5)\n",
+    "plt.hist(error(y_test, y_pred2), bins=100, color='red', alpha=0.5)\n",
+    "plt.hist(error(y_test, y_pred3), bins=100, color='green', alpha=0.5)\n",
+    "plt.hist(error(y_test, y_pred4), bins=100, color='black', alpha=0.2)\n",
+    "plt.legend(['Ridge', 'ElasticNet', 'RandomForest', 'MLP'])\n",
+    "plt.show()"
    ]
   },
   {
