rerun + correct typo

--- a/airbnb_prices.ipynb
+++ b/airbnb_prices.ipynb
@@ -445,7 +445,8 @@
     }
    ],
    "source": [
-    "def print_pct_price(attribute, value):\n",
+    "def print_pct_price(attribute: str, value: int):\n",
+    "    \"\"\" compute percentile of apartments over a given value\"\"\"\n",
     "    print('Apartments with {} over ${}: {:.2f}%'.\\\n",
     "          format(attribute, \\\n",
     "                 value, \\\n",
@@ -731,13 +732,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_price_dist(col_name):\n",
+    "def plot_price_dist(col_name: str, value=350):\n",
+    "    \"\"\" generate plot of distribution of price along categorical attribute\"\"\"\n",
     "    f, ax = plt.subplots(1,2, figsize=(20,5))\n",
     "    ax = ax.flatten()\n",
     "\n",
-    "    sns.violinplot(data=df_airbnb[df_airbnb.price < 350], x=col_name, y='price', ax=ax[0])\n",
+    "    sns.violinplot(data=df_airbnb[df_airbnb.price < value], x=col_name, y='price', ax=ax[0])\n",
     "    sns.violinplot(data=df_airbnb, x=col_name, y='price', ax=ax[1])\n",
-    "    ax[0].set_title('Price (up to $350) vs {}'.format(col_name))\n",
+    "    ax[0].set_title('Price (up to ${}) vs {}'.format(value, col_name))\n",
     "    ax[1].set_title('Price vs {}'.format(col_name))\n",
     "    \n",
     "    plt.show()"
@@ -1493,6 +1495,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Both train and test set follow the same distribution. This will help in the generalization task."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Define metrics and functions\n",
     "\n",
     "We will evaluate: \n",
@@ -1507,7 +1516,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_score(y_pred, y_true):\n",
+    "def get_score(y_pred: np.array, y_true: np.array):\n",
+    "    \"\"\" compute diverse metrics and plot results\"\"\"\n",
     "    print('RMSE: {:.4f}'.format(mean_squared_error(y_true, y_pred, squared=False)))\n",
     "    print('MAE : {:.4f}'.format(mean_absolute_error(y_true, y_pred)))\n",
     "    print('R2  : {:.4f}'.format(r2_score(y_true, y_pred)))\n"
@@ -1519,7 +1529,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fit_predict_cv(model, X_train, y_train, params, cv=5):\n",
+    "def fit_predict_cv(model, X_train: np.array, y_train: np.array, params: dict, cv=5):\n",
+    "    \"\"\" \n",
+    "    perform grid search with cross validation for a given model\n",
+    "    model: sklearn model object\n",
+    "    X_train: shape=(num observations, num features)\n",
+    "    y_train: shape=(num observation)\n",
+    "    params: dictionary with parameters of the model as key and list of values to perform grid search\n",
+    "    cv: int number of folds for cross validation\n",
+    "    \"\"\"\n",
     "    grid = GridSearchCV(estimator=model, param_grid=params, cv=cv)\n",
     "    grid.fit(X_train, y_train)\n",
     "    return grid"
@@ -1531,7 +1549,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fit_predict_best(model, X_train, y_train, X_test, y_test):\n",
+    "def fit_predict_best(model, X_train: np.array, y_train: np.array, X_test: np.array, y_test: np.array):\n",
+    "    \"\"\"\n",
+    "    fit model and generation prediction of test set\n",
+    "    model: sklearn model with parameters found through grid search\n",
+    "    X_train, X_test: shape=(num observations, num features)\n",
+    "    y_train, y_test: shape=(num observation)\n",
+    "    \"\"\"\n",
     "    t = time.time()\n",
     "    model.fit(X_train, y_train)\n",
     "    print('Training time {:.2f}s'.format(time.time() - t))\n",
@@ -1608,7 +1632,7 @@
      "output_type": "stream",
      "text": [
       "Best pameters:  {'alpha': 0.01, 'l1_ratio': 0.01}\n",
-      "Training time 0.01s\n",
+      "Training time 0.02s\n",
       "Inference time 0.00s\n",
       "RMSE: 0.7267\n",
       "MAE : 0.5311\n",
@@ -1656,8 +1680,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time 13.78s\n",
-      "Inference time 0.29s\n",
+      "Training time 14.55s\n",
+      "Inference time 0.39s\n",
       "RMSE: 0.6549\n",
       "MAE : 0.4610\n",
       "R2  : 0.5667\n"
@@ -1685,8 +1709,8 @@
      "output_type": "stream",
      "text": [
       "Best pameters:  {'max_depth': 11, 'n_estimators': 500}\n",
-      "Training time 39.22s\n",
-      "Inference time 0.49s\n",
+      "Training time 41.13s\n",
+      "Inference time 0.51s\n",
       "RMSE: 0.6495\n",
       "MAE : 0.4570\n",
       "R2  : 0.5737\n"
@@ -1734,7 +1758,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time 15.04s\n",
+      "Training time 15.57s\n",
       "Inference time 0.02s\n",
       "RMSE: 0.6666\n",
       "MAE : 0.4792\n",
@@ -1763,7 +1787,7 @@
      "output_type": "stream",
      "text": [
       "Best pameters:  {'activation': 'relu', 'alpha': 0.01, 'hidden_layer_sizes': (50, 50, 50), 'learning_rate_init': 0.001, 'max_iter': 100, 'solver': 'sgd', 'validation_fraction': 0.2}\n",
-      "Training time 22.48s\n",
+      "Training time 24.56s\n",
       "Inference time 0.04s\n",
       "RMSE: 0.6720\n",
       "MAE : 0.4790\n",
@@ -1842,8 +1866,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time 10.17s\n",
-      "Inference time 0.30s\n",
+      "Training time 9.92s\n",
+      "Inference time 0.32s\n",
       "RMSE: 0.7728\n",
       "MAE : 0.5611\n",
       "R2  : 0.3967\n"
